Enable word-wrap to show merchant name correctly

--- a/Amazon.co.jp_tweak.user.css
+++ b/Amazon.co.jp_tweak.user.css
@@ -6,7 +6,7 @@
   /* 3rd party reseller */
   .buying b > a[href*="seller="], #BBAvailPlusMerchID b,   /* Old */
   #merchant-info > a[href*="seller="], #soldByThirdParty b /* New */
-  { color: #d00 !important; font: bold 240% sans-serif !important; }
+  { color: #d00 !important; font: bold 240% sans-serif !important; word-wrap: break-word !important; }
 
   #BBAvailPlusMerchID b::before, /* Old */
   #soldByThirdParty b::before    /* New */
